added a subscription page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     </ul>
                 </li>
                 <li><a href="#pricing">Pricing</a></li>
+                <li><a href="subscription.html">Subscription</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -182,7 +183,7 @@
         <h2>Our Pricing</h2>
         <div class="pricing-grid">
             <div class="pricing-card quick-go">
-                <h3>Quick & Go</h3>
+                <h3>Wash and Go</h3>
                 <p class="price">R50</p>
                 <ul>
                     <li>Exterior Rinse</li>
