added a fleet management page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li><a href="interior-detailing.html">Interior Detailing</a></li>
                         <li><a href="exterior-detailing.html">Exterior Detailing</a></li>
                         <li><a href="ceramic-coating.html">Ceramic Coating</a></li>
+                        <li><a href="fleet-washing.html">Fleet Washing</a></li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-header">Advanced Services</li>
                         <li><a href="window-tinting.html">Window Tinting</a></li>
