--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         .nav-links {
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             flex-grow: 1;
-            margin: 0 30px;
+            margin: 0 30px 0 0;
             padding: 0;
         }
 
@@ -113,7 +113,7 @@
         .nav-actions {
             display: flex;
             align-items: center;
-            gap: 15px;
+            margin-left: auto;
         }
 
         .search-form {
@@ -240,6 +240,7 @@
                         <li><a href="maintenance-services.html">All Maintenance Services</a></li>
                     </ul>
                 </li>
+                <li><a href="fleet-washing.html">Fleet Washing</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="subscription.html">Subscription</a></li>
                 <li><a href="#about">About Us</a></li>
