--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
         /* Navigation Styles */
         .navbar {
             display: flex;
-            justify-content: space-between;
             align-items: center;
             padding: 15px 5%;
             position: relative;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            gap: 30px;
+        }
+
+        .logo {
+            display: flex;
+            flex-direction: column;
+            white-space: nowrap;
+            margin-right: 20px;
         }
 
         .nav-links {
             display: flex;
-            justify-content: flex-start;
             align-items: center;
-            flex-grow: 1;
-            margin: 0 30px 0 0;
-            padding: 0;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            padding: 5px 0;
+            margin: 0;
+            gap: 10px;
         }
 
         .nav-links > li {
@@ -109,63 +117,24 @@
             margin: 8px 0;
         }
 
-        /* Search Form */
+        /* Navigation Actions */
         .nav-actions {
             display: flex;
             align-items: center;
             margin-left: auto;
         }
 
-        .search-form {
-            display: flex;
-            align-items: center;
-            background: #f5f5f5;
-            border-radius: 20px;
-            padding: 5px 15px;
-            transition: all 0.3s ease;
-        }
-
-        .search-form:focus-within {
-            background: #fff;
-            box-shadow: 0 0 0 2px rgba(0,0,0,0.1);
-        }
-
-        .search-form input {
-            border: none;
-            background: transparent;
-            padding: 5px 10px;
-            outline: none;
-            width: 150px;
-            transition: width 0.3s ease;
-        }
-
-        .search-form input:focus {
-            width: 200px;
-        }
-
-        .search-form button {
-            background: none;
-            border: none;
-            color: #666;
-            cursor: pointer;
-            padding: 5px;
-        }
-
         .logo p {
-            margin: 5px 0 0 0;
-            font-size: 1rem;
+            margin: 2px 0 0 0;
+            font-size: 0.9rem;
             font-weight: 500;
             color: #4CAF50;
             letter-spacing: 0.5px;
-            text-shadow: 0 1px 1px rgba(0,0,0,0.1);
+            white-space: nowrap;
         }
 
         /* Mobile responsiveness */
         @media screen and (max-width: 1024px) {
-            .search-form {
-                display: none;
-            }
-            
             .nav-links {
                 display: none;
                 position: absolute;
@@ -247,10 +216,6 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="nav-actions">
-                <form class="search-form" action="#" method="get">
-                    <input type="text" placeholder="Search..." name="search">
-                    <button type="submit"><i class="fas fa-search"></i></button>
-                </form>
                 <div class="burger">
                     <div class="line1"></div>
                     <div class="line2"></div>
